--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,9 @@
 body {
-  background-image: url('https://drive.google.com/uc?export=view&id=1_gKxoNB5VcZUsQFC5T3er_1zwSVpUn5X');
+  background-image: url('https://images-ext-1.discordapp.net/external/XUGx-m1iWVFENpK1jm_A3q_PEGxASoOG9qNWyKL1fZk/https/i.postimg.cc/7YwNV4CP/fondo.webp?format=webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  width: 100%;
+  margin: 0;
 }
