--- a/estilo.css
+++ b/estilo.css
@@ -1,9 +1,45 @@
 body {
-  background-image: url('https://images-ext-1.discordapp.net/external/XUGx-m1iWVFENpK1jm_A3q_PEGxASoOG9qNWyKL1fZk/https/i.postimg.cc/7YwNV4CP/fondo.webp?format=webp');
+  padding: 2em; /* o el valor que necesites */
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  box-sizing: border-box;
+  background-image: url('https://i.postimg.cc/7YwNV4CP/fondo.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+
+nav {
+  background-color: rgb(175, 48, 48);
+  height: 2em;
   width: 100%;
+}
+
+.menu {
+  background-color: #a12b2b;
+  padding: 1em 0;
+  width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.menu ul {
+  display: flex;
+  justify-content: center;
+  gap: 3em;
+  list-style: none;
   margin: 0;
+  padding: 0;
+}
+
+li{
+    color: rgb(255, 255, 255);
+    font-size: 1.2em;
+    text-align: center;
+    margin-left: 4em;
+    margin-right: 4em;
 }
