cambios div(se agregò imagenes y se actualizo toda la estructura principal de la pagina)

--- a/estilo.css
+++ b/estilo.css
@@ -1,21 +1,13 @@
 body {
-  padding: 2em; /* o el valor que necesites */
   margin: 0;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  box-sizing: border-box;
+  padding: 2em;
   background-image: url('https://i.postimg.cc/7YwNV4CP/fondo.webp');
   background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
-
-nav {
-  background-color: rgb(175, 48, 48);
-  height: 2em;
-  width: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  font-family: sans-serif;
 }
 
 .menu {
@@ -30,16 +22,117 @@ nav {
 .menu ul {
   display: flex;
   justify-content: center;
-  gap: 3em;
   list-style: none;
+  gap: 3em;
   margin: 0;
   padding: 0;
 }
 
-li{
-    color: rgb(255, 255, 255);
-    font-size: 1.2em;
-    text-align: center;
-    margin-left: 4em;
-    margin-right: 4em;
+.menu li {
+  color: white;
+  font-size: 1.2em;
+}
+
+.contenedor {
+  display: flex;
+  max-width: 1200px;
+  margin: 2em auto;
+  gap: 2em;
+}
+
+.columna-izquierda {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+}
+
+.columna-derecha {
+  flex: 1.5;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+}
+
+.bloque-pato,
+.bloque-orden,
+.bloque-principal,
+.bloque-menu,
+.bloque-horario {
+  position: relative;
+  background-color: white;
+  padding: 1em;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.pato,
+.img-grande {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.nube {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.texto-central {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+  z-index: 3;
+}
+
+.texto-central h1 {
+  margin: 0;
+  font-size: 2em;
+}
+
+.texto-central p {
+  margin: 0.5em 0;
+  font-weight: bold;
+}
+
+.boton {
+  background-color: #a12b2b;
+  color: white;
+  border: none;
+  padding: 0.5em 1.5em;
+  margin-top: 1em;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.bloque-menu {
+  display: flex;
+  justify-content: space-between;
+  gap: 1em;
+}
+
+.item {
+  flex: 1;
+  text-align: center;
+}
+
+.item img {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-bottom: 0.5em;
+}
+
+.bloque-horario h3 {
+  background-color: #a12b2b;
+  color: white;
+  padding: 0.5em;
+  text-align: center;
+  margin: 0 0 1em 0;
 }
