--- a/estilo.css
+++ b/estilo.css
@@ -166,3 +166,53 @@ body {
     text-align: center;
     margin: 0 0 1em 0;
 }
+
+.ubicacion {
+    position: relative;
+    background-image: url('https://media.discordapp.net/attachments/785301561747439676/1400768932343713833/costilla.webp?ex=688dd73a&is=688c85ba&hm=f9bb8f5561b94f0ca306de11c8be8026ba035bd0e85df7c440deb3bf2db0a8bc&=&format=webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 400px;
+    display: flex;
+}
+
+.fondoblanco {
+    position: absolute;
+    background-color: white;
+    z-index: 2;
+    height: 50%;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.ubicacion h2{
+    position: relative;
+}
+
+.mapa{
+    position: relative;
+    text-align: center;
+    float: right;
+    top: 0;
+    left: 0;
+}
+
+.fondoblanco iframe {
+    width: 50%;
+    height: 100px;
+    border: none;
+}
+
+.ordenahoy{
+    float: left;
+}
+
+.ordenahoy h2{
+    color: #a12b2b;
+    font-size: 2em;
+}
