ultima imagen reparada

--- a/estilo.css
+++ b/estilo.css
@@ -195,7 +195,7 @@ body {
 
 .ubicacion {
     position: relative;
-    background-image: url('https://media.discordapp.net/attachments/785301561747439676/1400768932343713833/costilla.webp?ex=688dd73a&is=688c85ba&hm=f9bb8f5561b94f0ca306de11c8be8026ba035bd0e85df7c440deb3bf2db0a8bc&=&format=webp');
+    background-image: url('https://i.postimg.cc/rp3D9m6H/costilla.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
