--- a/estilo.css
+++ b/estilo.css
@@ -47,6 +47,7 @@ body {
     gap: 2em;
     padding: 2.5%;
     background-color: rgba(0, 0, 0, 0.199);
+    border-radius: 1em;
 }
 
 .columna-derecha {
@@ -56,11 +57,13 @@ body {
     gap: 2em;
     padding: 2%;
     background-color: rgba(0, 0, 0, 0.199);
+    border-radius: 1em;
 }
 
 .bloque-pato{
     padding: 0;
     position: relative;
+    border-radius: 1em;
 }
 
 .bloque-principal,
@@ -69,18 +72,24 @@ body {
 .bloque-horario {
     display: flex;
     position: relative;
-    background-color: white;
+    background-color: #a12b2b;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     flex-direction: column;
+    border-radius: 1em;
 }
 
 .bloque-horario img{
     float: left;
+    width: 30%;
+    flex-direction: row;
+    border-radius: 1em;
 }
 
 .bloque-horario div{
     float: right;
     text-align: center;
+    flex-direction: row-reverse;
+    border-radius: 1em;
 }
 
 .patopekin{
@@ -91,9 +100,16 @@ body {
     padding-bottom: 10%;
 }
 
-.textopato {
-    align-items: center
+.textopato h2{
+    align-items: center;
+    font-size: 4em;
 }
+
+.textopato p{
+    align-items: center;
+    font-size: 2em;
+}
+
 .patopekin img{
     width: 50%;
     right: 100%;
@@ -109,6 +125,8 @@ body {
     width: 100%;
     height: auto;
     display: block;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
 }
 
 .nube {
@@ -136,7 +154,6 @@ body {
 }
 
 .texto-central h1{
-    border: 1px solid black;
     padding: 10px;   
     color: rgb(247, 155, 17);
 }
@@ -169,9 +186,9 @@ body {
 }
 
 .boton:hover {
-  transform: scale(1.1);
-  background-color:aliceblue;
-  color: rgb(219, 100, 21);
+    transform: scale(1.1);
+    background-color:aliceblue;
+    color: rgb(219, 100, 21);
 }
 
 .contenedor{
@@ -194,11 +211,11 @@ body {
 
 .bloque-horario h3 {
     position: relative;
-    background-color: hsl(0, 58%, 40%);
+    font-size: 2em;
     color: white;
-    padding: 0.5em;
     text-align: center;
-    margin: 0 0 1em 0;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
 }
 
 .ubicacion {
@@ -211,6 +228,8 @@ body {
     width: 100%;
     height: 400px;
     display: flex;
+    border-bottom-left-radius: 1em;
+    border-bottom-right-radius: 1em;
 }
 
 .fondoblanco {
@@ -223,6 +242,8 @@ body {
     left: 0;
     padding: 10px;
     box-sizing: border-box;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .ubicacion h2{
@@ -253,13 +274,22 @@ body {
 }
 
 hr {
-  border: none;
-  height: 2px;
-  background-color: rgb(102, 52, 6);
-  width: 100%;
-  margin: 20px 0;
+    border: none;
+    height: 2px;
+    background-color: rgb(102, 52, 6);
+    width: 100%;
+    margin: 20px 0;
+}
+
+.imagenizquierda{
+    width: 150px;
+    height: auto;
+    border-radius: 8px;
 }
 
 .horario{
     width: 32em;
+    float: right;
+    flex-direction: row-reverse;
+    color: bisque;
 }
