--- a/estilo.css
+++ b/estilo.css
@@ -202,6 +202,16 @@ body {
     width: 100%;
 }
 
+.item h4{
+    color: white;
+    font-size: 2em;
+}
+
+.item p{
+    color: white;
+    font-size: 1em;
+}
+
 .item img {
     width: 100%;
     height: auto;
