--- a/estilo.css
+++ b/estilo.css
@@ -14,6 +14,7 @@ body {
     background-color: #7c0f0f;
     padding: 1em 0;
     width: 100%;
+    height: 2em;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -30,7 +31,9 @@ body {
 
 .menu li {
     color: white;
-    font-size: 1.2em;
+    font-size: 1.5em;
+    text-align: center;
+    font-weight: bold;
 }
 
 .contenedor {
@@ -180,6 +183,7 @@ body {
     height: auto;
     display: block;
     margin-bottom: 0.5em;
+    border-radius: 1em;
 }
 
 .ubicacion {
