ultimo commit antes de clase

--- a/estilo.css
+++ b/estilo.css
@@ -24,7 +24,7 @@ body {
     display: flex;
     justify-content: center;
     list-style: none;
-    gap: 3em;
+    gap: 4em;
     margin: 0;
     padding: 0;
 }
@@ -34,6 +34,21 @@ body {
     font-size: 1.5em;
     text-align: center;
     font-weight: bold;
+}
+
+.botonmenu {
+    display: inline-block;
+    padding: 8px 16px;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    cursor: pointer; 
+    transition: background-color 0.3s;
+    border-radius: 0.5em;
+}
+
+.botonmenu:hover {
+  background-color: #640909;
 }
 
 .contenedor {
@@ -179,11 +194,12 @@ body {
 }
 
 .item img {
-    width: 100%;
+    width: 90%;
     height: auto;
     display: block;
     margin-bottom: 0.5em;
     border-radius: 1em;
+    margin: 4%;
 }
 
 .ubicacion {
