--- a/estilomenu.css
+++ b/estilomenu.css
@@ -33,12 +33,12 @@ main {
     letter-spacing: 1px;
 }
 
-.seccion {
+section {
     text-align: center;
     margin-bottom: 2.5em;
 }
 
-.seccion h2 {
+section h2 {
     font-size: 1.3em;
     letter-spacing: 1px;
     text-transform: uppercase;
