--- a/estilo.css
+++ b/estilo.css
@@ -271,3 +271,10 @@ hr {
     text-align: center;
     margin: 0 0 0.5em 0;
 }
+
+footer {
+    text-align: center;
+    margin-top: 3em;
+    font-size: 0.9em;
+    color: #ffffff;
+}
